# maiq-parser-next

./: .gitignore  Cargo.toml  Dockerfile  README.md
.changes/: 2.0.0-alpha.1.md  2.0.0-alpha.2.md  2.0.0-alpha.3.md  2.0.0-alpha.4.md  2.1.0.md  2.1.1.md
.github/actions/setup/: action.yml
.github/workflows/: tests.yaml  up.yaml
maiq-bot/: Cargo.toml  build.rs
maiq-bot/replies/: about.md  build_info.md  config.md  set_groups.md  start.md  start_add_group.md  start_make_link.md
maiq-bot/replies/err/: group_not_set.md  no_timetable.md  no_timetable_exact.md  no_timetable_many.md
maiq-bot/replies/snapshot/: many_groups.md
maiq-bot/src/: build_info.rs  callbacks.rs  changelog.rs  commands.rs  context.rs  error.rs  format.rs  handler.rs  lib.rs  logger.rs  macros.rs  main.rs  parser.rs
maiq-bot/src/callbacks/: handler.rs  mod.rs
maiq-bot/src/commands/: handler.rs  mod.rs
maiq-cli/: Cargo.toml
maiq-cli/src/: main.rs
maiq-db/: Cargo.toml  build.rs
maiq-db/.sqlx/: query-07d0dba08b8e8ef7e1f25a356cf3cc4795f0aba455c8cc0b396f89c02979f7df.json  query-07f8dc001a4b6c8d51af26f7cf1ce5010a7b4c3de767442b6c5a9c93e14ddce0.json  query-11964b47ffee093b64f4abc23be0df4702bcf5373b11bc98d2e4591e712be9e9.json  query-19adeb613c577f335ff4e7b05f12a6d196f048af331e6608728131c0a319cbe4.json  query-2067d70754b99fedbb06de9004e934744021933bf94ef8dcec93ad0178e2fb37.json  query-2107c3490453fa2e59726703debfec8a73229f2feea1099d0013ca910a1df2cf.json  query-34e3ba24edccf61798116fc13f8e75eecd71e51b94a60fad9458a6252bb9c207.json  query-3b3afcd976471c7eff41b4804fce2768e08ad031ec9372f2170304afba5cef59.json  query-47f4896f0c4c2f6a4e9709650cea24def3ef79d4b86e8375ad926ed43d3afac7.json  query-977cbda1911978022a4c0d2d6ead10beedbdabb03a24edddc763a46d9af1e179.json  query-9a824efc10b4353149cda5095ed6cdfb16d7571f6baf31bfad5b86f042a577aa.json  query-9c0e8ad4e49c4256eb2b4c63aa9aafeb310cd256d6240d8094778c00993e43ce.json  query-d22a32a6877912704f43ab52713e5769a16cdc004063de651271749ba6e66dd1.json
maiq-db/migrations/: 20231007130821_init.sql  20231008004704_target_group_list.sql  20231012212002_unique_constraints.sql
maiq-db/migrations/2023-12-03-091220_init/: down.sql
maiq-db/migrations/2023-12-03-091311_target_group/: down.sql  up.sql
maiq-db/migrations/2023-12-03-093734_delete_configs/: down.sql  up.sql
maiq-db/sql/: get_user_by_id.sql  get_users.sql  insert_new_user.sql
maiq-db/src/: error.rs  lib.rs  models.rs  queries.rs  schema.rs  utils.rs
maiq-db/tests/: user.rs
maiq-parser/: Cargo.toml
maiq-parser/src/: error.rs  lib.rs  prelude.rs  snapshot.rs  utils.rs
maiq-parser/src/parser/: context.rs  default_lectures.rs  mod.rs  parse_date.rs  periodical.rs  repeating.rs
maiq-parser/src/parser/impl/: mod.rs
maiq-parser/src/parser/impl_buildings/: context4.rs
maiq-parser/src/parser/impls/: mod.rs  parser4.rs
maiq-parser/src/utils/: time.rs
src/: error.rs  lib.rs  snapshot.rs
src/parser/: context.rs  default_lectures.rs  mod.rs  parse_date.rs  periodical.rs  table.rs
src/utils/: time.rs
