[package]
name = "maiq-parser-next"
authors = ["pashokitsme <t.me/pashokitsme>"]
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tl = "0.7.7"

log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
aho-corasick = "1.0.5"
reqwest = "0.11.20"
tokio = "1.32.0"
url = "2.4.1"

[dev-dependencies]
rstest = "0.18.2"
