[workspace]
resolver = "2"
members = ["maiq-bot", "maiq-cli", "maiq-parser", "maiq-db"]

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/pashokitsme/maiq-bot"
edition = "2021"
authors = ["pashokitsme <t.me/pashokitsme>"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[profile.dev]
panic = "abort"
