[workspace]
resolver = "2"
members = ["maiq-bot", "maiq-cli", "maiq-parser", "maiq-db"]

[workspace.package]
license = "MPL-2.0"
version = "2.0.1"
repository = "https://github.com/pashokitsme/maiq-parser-next"
edition = "2021"
authors = ["pashokitsme <t.me/pashokitsme>"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = false
panic = "abort"

[profile.dev]
panic = "abort"
