[package]
name = "maiq-bot"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12.2", features = [
  "cache-me",
  "macros",
  "teloxide-macros",
  "bincode",
  "bincode-serializer",
] }
maiq-parser-next = { path = "../maiq-parser" }

log = "0.4.20"
dotenvy = "0.15.7"

fastrand = "2.0.1"
bincode = "1.3.3"
color-eyre = "0.6.2"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.2"
