[package]
name = "maiq-bot"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12.2", default-features = false, features = [
  "cache-me",
  "macros",
  "teloxide-macros",
  "bincode",
  "bincode-serializer",
  "rustls",
] }
maiq-db = { path = "../maiq-db" }
maiq-parser-next = { path = "../maiq-parser" }

log = "0.4.20"
dotenvy = "0.15.7"

fastrand = "2.0.1"
bincode = "1.3.3"
color-eyre = "0.6.2"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
build-info = "0.0.34"

[dev-dependencies]
rstest = "0.18.2"

[build-dependencies]
pulldown-cmark = { version = "0.9.3", features = ["simd"] }
build-info-build = { version = "0.0.34", default-features = false }
walkdir = "2.4.0"
