[package]
name = "maiq-db"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7.2", features = [
  "chrono",
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
] }
chrono = "0.4.31"
getset = "0.1.2"
log = "0.4.20"

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.32.0", features = ["macros"] }
