[package]
name = "maiq-db"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
chrono = "0.4.31"
getset = "0.1.2"
log = "0.4.20"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono"], default-features = false }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.32.0", features = ["macros"] }
