[package]
name = "maiq-parser-next"
version = "0.1.0"
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
tl = "0.7.7"

log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
aho-corasick = "1.0.5"
tokio = "1.32.0"
url = "2.4.1"
tokio-util = "0.7.8"
chrono = { version = "0.4.28", default-features = false, features = [
  "alloc",
  "serde",
  "std",
  "clock",
  "serde",
] }
ureq = "2.8.0"

[dev-dependencies]
rstest = "0.18.2"
